client: improve /reserve UI
- filter cars by model
- mark available cars based on start/end date
- disallow dates in past, start<end
- use angular-strap datepicker

--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,14 @@
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
 
+  <!-- Datepicker + its deps -->
+  <script src="/bower_components/angular-strap/src/helpers/date-parser.js"></script>
+  <script src="/bower_components/angular-strap/src/helpers/dimensions.js"></script>
+  <script src="/bower_components/angular-strap/dist/modules/tooltip.js"></script>
+  <script src="/bower_components/angular-strap/dist/modules/datepicker.js"></script>
+  <script src="/bower_components/angular-strap/dist/modules/datepicker.tpl.js"></script>
+
+
   <!-- minify:js -->
   <script src="./reserve_controller.js"></script>
   <script src="./existing_controller.js"></script>
