client/reserve: load data from server

--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
 
 
   <!-- minify:js -->
+  <script src="./data_source.js"></script>
   <script src="./reserve_controller.js"></script>
   <script src="./existing_controller.js"></script>
   <script src="./app_controller.js"></script>
