--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html ng-app="fm">
+<html ng-app="fm" ng-controller="App">
   <head>
-    <title>FleetManager</title>
+    <title ng-bind="pageTitle">FleetManager</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="./app.css">
   </head>
 
-  <body ng-controller="App">
+  <body>
 
 
   <!-- Sticky Header -->
   <header class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container title">
+    <div class="container title" ng-bind="pageTitle">
       FleetManager
     </div>
   </header>
