submit reservation to db

--- a/client/reserve.html
+++ b/client/reserve.html
@@ -34,5 +34,5 @@
     <label for="note-input">Note (optional)</label>
     <textarea ng-model="note" class="form-control" rows="3" id="note-input" placeholder="Note"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary btn-lg">Reserve</button>
+  <button ng-click="submitReservation()" type="submit" class="btn btn-primary btn-lg">Reserve</button>
 </form>
