--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
   </header>
 
   <!-- The Main Content -->
-  <div ng-view></div>
+  <div ng-view class="content"></div>
 
   <!-- Loader Indicator -->
   <div style="display:none;" id="loader-indicator" class="modal-backdrop">
