client: basic reservation success page

--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@
   <script src="./data_source.js"></script>
   <script src="./loading_indicator.js"></script>
   <script src="./reserve_controller.js"></script>
+  <script src="./reserve_success_controller.js"></script>
   <script src="./existing_controller.js"></script>
   <script src="./app_controller.js"></script>
   <script src="./app.js"></script>
