protocol.pdf download

--- a/client/reserve_success.html
+++ b/client/reserve_success.html
@@ -3,7 +3,7 @@
 <p>od {{reservation.start | date}} do {{reservation.end | date}}</p>
 
 <div class="btn-group-vertical">
-  <button ng-click="" class="btn btn-lg"></button>
+  <a ng-href="/storage/reservations/{{reservation.id}}/protocol.pdf" class="btn btn-lg">Stáhnout protokol</a>
   <button ng-click="" class="btn btn-lg"></button>
   <button ng-click="" class="btn btn-lg"></button>
   <button ng-click="" class="btn btn-lg"></button>
