--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
   <!-- Libraries -->
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
+  <script src="/bower_components/angular-touch/angular-touch.js"></script>
 
   <!-- Datepicker + its deps -->
   <script src="/bower_components/angular-strap/src/helpers/date-parser.js"></script>
