client: hack bottom buttons on iOS

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,8 @@
   <!-- The Main Content -->
   <div ng-view class="content"></div>
 
+  <div class="footer-ios-hack">&nbsp;</div>
+
   <!-- Loader Indicator -->
   <div style="display:none;" id="loader-indicator" class="modal-backdrop">
     <img src="./loading.gif" alt="Loading...">
