--- a/client/menu.html
+++ b/client/menu.html
@@ -1,4 +1,4 @@
 <nav class="menu-main btn-group-vertical">
-  <a href="#/reserve" class="btn btn-default">RESERVE</a>
-  <a href="#/existing" class="btn btn-default">EXISTING</a>
+  <a href="#/reserve" class="btn btn-default">REZERVOVAT</a>
+  <a href="#/existing" class="btn btn-default">STÁVAJÍCÍ</a>
 </nav>
