client/reserve: add reserve more btn

--- a/client/reserve_success.html
+++ b/client/reserve_success.html
@@ -4,8 +4,6 @@
 
 <div class="btn-group-vertical">
   <a ng-href="/storage/reservations/{{reservation.id}}/protocol.pdf" class="btn btn-lg">Stáhnout protokol</a>
-  <button ng-click="" class="btn btn-lg"></button>
-  <button ng-click="" class="btn btn-lg"></button>
-  <button ng-click="" class="btn btn-lg"></button>
+  <a ng-href="#/reserve" class="btn btn-lg">Rezervovat další</a>
 </div>
 </div>
