--- a/client/reserve.html
+++ b/client/reserve.html
@@ -14,13 +14,13 @@
   </div>
   <div class="form-group">
     <label for="start-input">Začátek výpůjčky - vyzvednutí vozu</label>
-    <input ng-model="startDate" ng-change="startDateChanged()" id="start-input"
-           type="text" class="form-control" min-date="{{TODAY}}" bs-datepicker>
+    <input ng-model="startDate" ng-change="startDateChanged()" disabled-dates="unavailableDates"
+           type="text" id="start-input" class="form-control" min-date="{{TODAY}}" bs-datepicker>
   </div>
   <div class="form-group">
     <label for="end-input">Konec výpůjčky - vrácení vozu</label>
-    <input ng-model="endDate" ng-change="endDateChanged()" id="end-input"
-           type="text" class="form-control" min-date="{{startDate}}" bs-datepicker>
+    <input ng-model="endDate" ng-change="endDateChanged()" disabled-dates="unavailableDates"
+           type="text" id="end-input" class="form-control" min-date="{{startDate}}" bs-datepicker>
   </div>
   <div class="form-group">
     <label for="customer-input">Zákazník</label>
