--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
   <script src="/bower_components/angular-strap/src/helpers/date-parser.js"></script>
   <script src="/bower_components/angular-strap/src/helpers/dimensions.js"></script>
   <script src="/bower_components/angular-strap/dist/modules/tooltip.js"></script>
-  <script src="/bower_components/angular-strap/dist/modules/datepicker.js"></script>
+  <script src="./hacked-datepicker.js"></script>
   <script src="/bower_components/angular-strap/dist/modules/datepicker.tpl.js"></script>
 
 
