--- a/client/reserve.html
+++ b/client/reserve.html
@@ -8,8 +8,8 @@
   <div class="form-group">
     <div ng-repeat="car in carOptions" ng-click="selectCar(car)"
          ng-class="{'selected': selectedCar === car, 'not-available': !car.available}" class="car-option">
-      <strong>{{car.model_name}}</strong>
-      {{car.description}}
+         <img src="./car_600x300.png" alt="{{car.name}}">
+         <strong>{{car.name}} ({{car.model_year}})</strong>, výbava: {{car.equipment}}, {{car.transmission}}
     </div>
   </div>
   <div class="form-group">
