client/reserve: translate missed label

--- a/client/reserve.html
+++ b/client/reserve.html
@@ -1,6 +1,6 @@
 <form role="form" name="form" novalidate>
   <div class="form-group">
-    <label for="car-model-select">Car</label>
+    <label for="car-model-select">Vůz</label>
     <select ng-model="selectedModel" ng-options="model.name for model in modelOptions"
             ng-change="filterCarsByModel(selectedModel)"
             class="form-control" id="car-model-select"></select>
