--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- build:css -->
     <link rel="stylesheet" href="./app.css">
+    <!-- endbuild -->
   </head>
 
   <body ontouchstart="">
@@ -37,6 +39,7 @@
   <script src="/bower_components/angular-route/angular-route.js"></script>
   <script src="/bower_components/angular-touch/angular-touch.js"></script>
 
+  <!-- build:js -->
   <!-- Datepicker + its deps -->
   <script src="/bower_components/angular-strap/src/helpers/date-parser.js"></script>
   <script src="/bower_components/angular-strap/src/helpers/dimensions.js"></script>
@@ -44,8 +47,7 @@
   <script src="./hacked-datepicker.js"></script>
   <script src="/bower_components/angular-strap/dist/modules/datepicker.tpl.js"></script>
 
-
-  <!-- minify:js -->
+  <!-- Application -->
   <script src="./data_source.js"></script>
   <script src="./loading_indicator.js"></script>
   <script src="./reserve_controller.js"></script>
@@ -53,7 +55,7 @@
   <script src="./existing_controller.js"></script>
   <script src="./app_controller.js"></script>
   <script src="./app.js"></script>
-  <!-- end:js -->
+  <!-- endbuild -->
 
   </body>
 </html>
