--- a/client/index.html
+++ b/client/index.html
@@ -34,10 +34,11 @@
   </div>
 
 
-  <!-- Libraries -->
+  <!-- build:angular -->
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
   <script src="/bower_components/angular-touch/angular-touch.js"></script>
+  <!-- endbuild -->
 
   <!-- build:js -->
   <!-- Datepicker + its deps -->
