client: load missing configure file

--- a/client/index.html
+++ b/client/index.html
@@ -55,6 +55,7 @@
   <script src="./reserve_success_controller.js"></script>
   <script src="./existing_controller.js"></script>
   <script src="./app_controller.js"></script>
+  <script src="./configure.js"></script>
   <script src="./app.js"></script>
   <!-- endbuild -->
 
