client: use commonjs

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="fm" ng-controller="App">
+<html ng-controller="App">
   <head>
     <title ng-bind="pageTitle">FleetManager</title>
 
@@ -49,14 +49,7 @@
   <script src="/bower_components/angular-strap/dist/modules/datepicker.tpl.js"></script>
 
   <!-- Application -->
-  <script src="./data_source.js"></script>
-  <script src="./loading_indicator.js"></script>
-  <script src="./reserve_controller.js"></script>
-  <script src="./reserve_success_controller.js"></script>
-  <script src="./existing_controller.js"></script>
-  <script src="./app_controller.js"></script>
-  <script src="./configure.js"></script>
-  <script src="./app.js"></script>
+  <script src="node_modules/mr/bootstrap.js" data-module="index"></script>
   <!-- endbuild -->
 
   </body>
