client/build: set up less

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,8 @@
 
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- build:css -->
-    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet/less" href="./app.less">
+    <script src="/node_modules/gulp-less/node_modules/less/dist/less-1.7.1.js"></script>
     <!-- endbuild -->
   </head>
 
