--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- build:css -->
-    <link rel="stylesheet/less" href="./app.less">
-    <script src="/node_modules/gulp-less/node_modules/less/dist/less-1.7.1.js"></script>
+    <link href="./index.less" rel="stylesheet/less">
+    <script src="../node_modules/gulp-less/node_modules/less/dist/less-1.7.1.js"></script>
     <!-- endbuild -->
   </head>
 
@@ -36,21 +36,20 @@
 
 
   <!-- build:angular -->
-  <script src="/bower_components/angular/angular.js"></script>
-  <script src="/bower_components/angular-route/angular-route.js"></script>
-  <script src="/bower_components/angular-touch/angular-touch.js"></script>
+  <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/angular-route/angular-route.js"></script>
+  <script src="../bower_components/angular-touch/angular-touch.js"></script>
   <!-- endbuild -->
-
   <!-- build:js -->
   <!-- Datepicker + its deps -->
-  <script src="/bower_components/angular-strap/src/helpers/date-parser.js"></script>
-  <script src="/bower_components/angular-strap/src/helpers/dimensions.js"></script>
-  <script src="/bower_components/angular-strap/dist/modules/tooltip.js"></script>
-  <script src="./hacked-datepicker.js"></script>
-  <script src="/bower_components/angular-strap/dist/modules/datepicker.tpl.js"></script>
+  <script src="../bower_components/angular-strap/src/helpers/date-parser.js"></script>
+  <script src="../bower_components/angular-strap/src/helpers/dimensions.js"></script>
+  <script src="../bower_components/angular-strap/dist/modules/tooltip.js"></script>
+  <script src="../lib/hacked-datepicker.js"></script>
+  <script src="../bower_components/angular-strap/dist/modules/datepicker.tpl.js"></script>
 
   <!-- Application -->
-  <script src="node_modules/mr/bootstrap.js" data-module="index"></script>
+  <script src="../node_modules/mr/bootstrap.js" data-module="src/index" data-package=".."></script>
   <!-- endbuild -->
 
   </body>
