client: add cs-cz locale

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -48,6 +48,9 @@
   <script src="../lib/hacked-datepicker.js"></script>
   <script src="../bower_components/angular-strap/dist/modules/datepicker.tpl.js"></script>
 
+  <!-- CZ Locale -->
+  <script src="../lib/angular-locale_cs-cz.js"></script>
+
   <!-- Application -->
   <script src="../node_modules/mr/bootstrap.js" data-module="src/index" data-package=".."></script>
   <!-- endbuild -->
