clien: add menu/settings buttons

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -19,8 +19,11 @@
 
   <!-- Sticky Header -->
   <header class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container title" ng-bind="pageTitle">
-      FleetManager
+
+    <div class="container title">
+      <a href="#/" is-visible="showMenuButton" class="btn-home"><span class="glyphicon glyphicon-tasks"></span></a>
+      <a href="#/" class="btn-settings"><span class="glyphicon glyphicon-cog"></span></a>
+      <span ng-bind="pageTitle">FleetManager</span>
     </div>
   </header>
 
