--- a/client/src/reserve/reserve.html
+++ b/client/src/reserve/reserve.html
@@ -13,29 +13,28 @@
       </div>
     </div>
   </div>
-  <div class="form-group has-feedback" ng-class="{'has-error': form.startDate.$dirty && form.startDate.$invalid}">
+  <div class="form-group has-feedback" error-class-for="form.startDate">
     <label for="start-input">Začátek výpůjčky - vyzvednutí vozu</label>
     <input ng-model="startDate" ng-change="startDateChanged()" disabled-dates="unavailableDates"
            type="text" name="startDate" id="start-input" class="form-control" min-date="{{TODAY}}" bs-datepicker>
     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
   </div>
-  <div class="form-group has-feedback" ng-class="{'has-error': form.endDate.$dirty && form.endDate.$invalid}">
+  <div class="form-group has-feedback" error-class-for="form.endDate">
     <label for="end-input">Konec výpůjčky - vrácení vozu</label>
     <input ng-model="endDate" ng-change="endDateChanged()" disabled-dates="unavailableDates"
            type="text" name="endDate" id="end-input" class="form-control" min-date="{{startDate}}" bs-datepicker>
     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
   </div>
-  <!-- TODO(vojta): encapsulate the has-error class into a directive -->
-  <div class="form-group has-feedback" ng-class="{'has-error': form.customerName.$dirty && form.customerName.$invalid}">
+  <div class="form-group has-feedback" error-class-for="form.customerName">
     <label for="customer-input">Zákazník</label>
     <input ng-model="customer.name" required class="form-control" type="text" name="customerName" id="customer-input" placeholder="Jméno Příjmení" mark-dirty-on-blur>
     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
   </div>
-  <div class="form-group has-feedback no-label" ng-class="{'has-error': form.customerPhone.$dirty && form.customerPhone.$invalid}">
+  <div class="form-group has-feedback no-label" error-class-for="form.customerPhone">
     <input ng-model="customer.phone" required class="form-control" type="tel" name="customerPhone" inputmode="tel" placeholder="Telefon" mark-dirty-on-blur>
     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
   </div>
-  <div class="form-group has-feedback no-label" ng-class="{'has-error': form.customerAddress.$dirty && form.customerAddress.$invalid}">
+  <div class="form-group has-feedback no-label" error-class-for="form.customerAddress">
     <input ng-model="customer.address" required class="form-control" type="text" name="customerAddress" placeholder="Adresa" mark-dirty-on-blur>
     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
   </div>
