--- a/client/src/existing/existing.html
+++ b/client/src/existing/existing.html
@@ -1,1 +1,11 @@
-Existing reservations
+<table class="table table-striped" style="text-align: left;">
+
+<ul class="list-group">
+  <li ng-repeat="reservation in reservations" href="#" class="list-group-item">
+    <h4 class="list-group-item-heading">{{reservation.start | date}} - {{reservation.end | date}}, {{reservation.car.name}}</h4>
+    <p class="list-group-item-text">{{reservation.customer.first_name}} {{reservation.customer.last_name}}
+    <a ng-href="tel:{{reservation.customer.phone}}" ng-show="reservation.customer.phone">
+      <span class="glyphicon glyphicon-earphone"></span>{{reservation.customer.phone | phoneNumber}}</a><br>
+    Zarezervováno: {{reservation.created_at | date:short}}</p>
+  </li>
+</ul>
