--- a/client/src/reserve/reserve_success.html
+++ b/client/src/reserve/reserve_success.html
@@ -11,7 +11,7 @@
 </div>
 
 <div>
-  <a ng-href="/storage/reservations/{{reservation.id}}/protocol.pdf" download="protocol.pdf" class="btn btn-lg">Stáhnout protokol</a>
-  <a ng-href="/storage/reservations/{{reservation.id}}/survey.pdf" download="survey.pdf" class="btn btn-lg">Stáhnout dotazník</a>
+  <a ng-href="/storage/reservations/{{reservation.id}}-protocol.pdf" download="protocol.pdf" class="btn btn-lg">Stáhnout protokol</a>
+  <a ng-href="/storage/reservations/{{reservation.id}}-survey.pdf" download="survey.pdf" class="btn btn-lg">Stáhnout dotazník</a>
 </div>
 </div>
