client/reserve: show “SELECTED” overlay

--- a/client/src/reserve/reserve.html
+++ b/client/src/reserve/reserve.html
@@ -11,6 +11,7 @@
       <div class="car-label">
         <strong>{{car.name}} ({{car.model_year}})</strong>, {{car.equipment}}, {{car.transmission}}
       </div>
+      <div class="overlay-selected">VYBRÁNO</div>
     </div>
   </div>
   <div class="form-group has-feedback" error-class-for="form.startDate">
