client: prefix page titles with “FleetManager”

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -22,7 +22,7 @@
     <div class="container title">
       <a href="#/" is-visible="showMenuButton" class="btn-home"><span class="glyphicon glyphicon-tasks"></span></a>
       <a href="#/" class="btn-settings"><span class="glyphicon glyphicon-cog"></span></a>
-      <span ng-bind="pageTitle">FleetManager</span>
+      <span ng-bind="pageHeader">FleetManager</span>
     </div>
   </header>
 
