client: validate phone number

--- a/client/src/reserve/reserve.html
+++ b/client/src/reserve/reserve.html
@@ -32,7 +32,7 @@
     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
   </div>
   <div class="form-group has-feedback no-label" error-class-for="form.customerPhone">
-    <input ng-model="customer.phone" required class="form-control" type="tel" name="customerPhone" inputmode="tel" placeholder="Telefon" mark-dirty-on-blur>
+    <input ng-model="customer.phone" required phone-validator class="form-control" type="tel" name="customerPhone" inputmode="tel" placeholder="Telefon" mark-dirty-on-blur>
     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
   </div>
   <div class="form-group has-feedback no-label" error-class-for="form.customerAddress">
