client: very basic reservation finish

--- a/client/src/existing/existing.html
+++ b/client/src/existing/existing.html
@@ -7,5 +7,6 @@
     <a ng-href="tel:{{reservation.customer.phone}}" ng-show="reservation.customer.phone">
       <span class="glyphicon glyphicon-earphone"></span>{{reservation.customer.phone | phoneNumber}}</a><br>
     Zarezervováno: {{reservation.created_at | date:short}}</p>
+    <a ng-href="#/finish/{{reservation.id}}" class="btn btn-default">ukončit</a>
   </li>
 </ul>
