--- a/client/src/index.html
+++ b/client/src/index.html
@@ -36,12 +36,17 @@
     <img src="./loading.gif" alt="Loading...">
   </div>
 
+  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 
   <!-- build:angular -->
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
   <script src="../bower_components/angular-touch/angular-touch.js"></script>
   <!-- endbuild -->
+
+  <!-- TODO(vojta): move under the build -->
+  <script src="../bower_components/angular-file-upload/angular-file-upload.js"></script>
+
   <!-- build:js -->
   <!-- Datepicker + its deps -->
   <script src="../bower_components/angular-strap/src/helpers/date-parser.js"></script>
