client/finish: fuel state slider

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -46,6 +46,8 @@
 
   <!-- TODO(vojta): move under the build -->
   <script src="../bower_components/angular-file-upload/angular-file-upload.js"></script>
+  <script src="../bower_components/seiyria-bootstrap-slider/js/bootstrap-slider.js"></script>
+  <script src="../bower_components/angular-bootstrap-slider/slider.js"></script>
 
   <!-- build:js -->
   <!-- Datepicker + its deps -->
