--- a/client/src/finish/finish.html
+++ b/client/src/finish/finish.html
@@ -12,6 +12,11 @@
   </div>
 
   <div class="form-group">
+    <label for="fuel-input">Stav palivoměru</label>
+    <slider ng-model="fuelState" min="0" max="100" step="10">
+  </div>
+
+  <div class="form-group">
     <label for="identity-file">Doklad totožnosti</label>
     <span class="help-block">Zde prosím nahrajte naskenovaný doklad totožnosti řidiče, tj. řidičský nebo občanský průkaz.</span>
 
