--- a/client/src/index.html
+++ b/client/src/index.html
@@ -44,12 +44,14 @@
   <script src="../bower_components/angular-touch/angular-touch.js"></script>
   <!-- endbuild -->
 
-  <!-- TODO(vojta): move under the build -->
+  <!-- build:js -->
+  <!-- FileUpload directive -->
   <script src="../bower_components/angular-file-upload/angular-file-upload.js"></script>
+
+  <!-- Slider (Bootstrap component + Angular directive wrapper) -->
   <script src="../bower_components/seiyria-bootstrap-slider/js/bootstrap-slider.js"></script>
   <script src="../bower_components/angular-bootstrap-slider/slider.js"></script>
 
-  <!-- build:js -->
   <!-- Datepicker + its deps -->
   <script src="../bower_components/angular-strap/src/helpers/date-parser.js"></script>
   <script src="../bower_components/angular-strap/src/helpers/dimensions.js"></script>
