--- a/client/src/finish/finish.html
+++ b/client/src/finish/finish.html
@@ -1,8 +1,10 @@
-<h4 class="list-group-item-heading">{{reservation.start | date}} - {{reservation.end | date}}, {{reservation.car.name}}</h4>
-  <p class="list-group-item-text">{{reservation.customer.first_name}} {{reservation.customer.last_name}}
-    <a ng-href="tel:{{reservation.customer.phone}}" ng-show="reservation.customer.phone">
-      <span class="glyphicon glyphicon-earphone"></span>{{reservation.customer.phone | phoneNumber}}
-    </a>
+<h4 class="list-group-item-heading">{{reservation.car.name}} ({{reservation.start | date}} - {{reservation.end | date}})</h4>
+
+<p class="list-group-item-text">{{reservation.customer.first_name}} {{reservation.customer.last_name}}
+  <a ng-href="tel:{{reservation.customer.phone}}" ng-show="reservation.customer.phone">
+    <span class="glyphicon glyphicon-earphone"></span>{{reservation.customer.phone | phoneNumber}}
+  </a>
+</p>
 
 <form name="form" novalidate>
   <div class="form-group has-feedback" error-class-for="form.tachometerState">
