--- a/client/src/reserve/reserve_success.html
+++ b/client/src/reserve/reserve_success.html
@@ -1,17 +1,12 @@
 <div>
-<strong>{{reservation.car_name}}</strong>
+<strong>{{reservation.car.name}}</strong>
 <p>od {{reservation.start | date}} do {{reservation.end | date}}</p>
 <p>Rezervace proběhla úspěšně.</p>
 
 <div class="btn-group-vertical first-standalone">
   <a ng-href="#/" class="btn btn-lg btn-primary standalone-in-group">OK</a>
   <a ng-href="#/reserve" class="btn btn-lg btn-default first-child">Rezervovat další</a>
-  <a ng-href="#/reserve/{{reservation.id}}/edit" class="btn btn-lg btn-default">Upravit</a>
   <a ng-click="cancelReservation()" class="btn btn-lg btn-danger">Zrušit</a>
 </div>
 
-<div>
-  <a ng-href="/storage/reservations/{{reservation.id}}-protocol.pdf" download="protocol.pdf" class="btn btn-lg">Stáhnout protokol</a>
-  <a ng-href="/storage/reservations/{{reservation.id}}-survey.pdf" download="survey.pdf" class="btn btn-lg">Stáhnout dotazník</a>
-</div>
 </div>
