--- a/client/src/reserve/reserve.html
+++ b/client/src/reserve/reserve.html
@@ -27,7 +27,7 @@
     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
   </div>
   <div class="form-group has-feedback" error-class-for="form.customerName">
-    <label for="customer-input">Zákazník</label>
+    <label for="customer-input">Zákazník (řidič)</label>
     <input ng-model="customer.name" required class="form-control" type="text" name="customerName" id="customer-input" placeholder="Jméno Příjmení" mark-dirty-on-blur>
     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
   </div>
